fix resources page

--- a/resources.html
+++ b/resources.html
@@ -242,7 +242,9 @@
         <div class="footer-inner">
             <div class="footer-box">
                 <h4>Contact</h4>
-                <a href="mailto:info@peer-2-peer.co.za">admin@peer-2-peer.co.za</a>
+                <a href="/cdn-cgi/l/email-protection#eb82858d84ab9b8e8e99c6d9c69b8e8e99c58884c5918a"><span
+                        class="__cf_email__"
+                        data-cfemail="accdc8c1c5c2ecdcc9c9de819e81dcc9c9de82cfc382d6cd">[email&#160;protected]</span></a>
                 <a href="https://wa.me/27732792426">WhatsApp: +27 73 279 2426</a>
             </div>
             <div class="footer-box">
@@ -276,6 +278,7 @@
         </div>
     </div>
 
+    <script data-cfasync="false" src="/cdn-cgi/scripts/autofill/cloudflare-static/rocket-loader.min.js"></script>
     <script src="resources.js"></script>
 </body>
 
